[package]
name = "nodepass"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", features = ["pem"] }
quinn = "0.11"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
h2 = "0.4"
http = "1"
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
url = "2"
dashmap = "6"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8"
thiserror = "2"
anyhow = "1"
bytes = "1"
pin-project-lite = "0.2"
futures-util = { version = "0.3", features = ["sink"] }
webpki-roots = "0.26"
async-trait = "0.1"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
time = "0.3"
urlencoding = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
